# tabset

./: .gitignore  Cargo.toml  README.md
example_configs/devices/huion-kamvas-13/: name  peripherals
example_configs/devices/huion-kamvas-13/profiles/: blender.sh  default.sh
src/: config.rs  main.rs
src/commands/: check.rs  list.rs  mod.rs  profile.rs
