[package]
name = "tabset"
version = "0.1.0"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2018"
description = "A Linux drawing tablet configuration tool"
readme = "README.md"
homepage = "https://github.com/ewpratten/tabset"
repository = "https://github.com/ewpratten/tabset"
license = "GPL-3.0"
keywords = ["configuration", "tablet", "wacom", "x11"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.2", features = ["color"] }
colored = "2.0.0"
directories = "4.0.1"